fix: naming, buttons alignment

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -4,7 +4,7 @@
 body {
   margin: auto;
   width: 35%;
-  min-width: 500px;
+  min-width: 450px;
 }
 
 header {
@@ -30,27 +30,20 @@ main {
     display: flex;
     flex-direction: column;
 
-    .flexRow {
+    .flex-row-container {
+      width: 100%;
       display: flex;
-      flex-direction: row;
-      align-items: center;
       justify-content: center;
-
-      &__boldLabel {
-        width: 100%;
-        font-weight: map-get($font-weight, bold);
-        font-size: 15px;
-      }
 
       .gap {
         margin-right: 20px;
       }
 
-      .flexCol {
+      .flex-col-container {
+        width: 50%;
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
 
         button {
           width: 100%;
@@ -74,7 +67,8 @@ main {
       }
     }
 
-    &__boldLabel {
+    .bold-label {
+      margin-top: 15px;
       width: 100%;
       font-weight: map-get($font-weight, bold);
       font-size: 15px;
@@ -84,7 +78,6 @@ main {
       width: 100%;
       height: 45px;
       padding: 12px 20px;
-      margin: 10px 0;
       border: 1px solid $secondary-color;
       background-color: $primary-color;
       outline: none;
@@ -106,7 +99,6 @@ main {
       height: 70px;
       max-height: 200px;
       padding: 12px 20px;
-      margin: 10px 0;
       resize: vertical;
       border: 1px solid $secondary-color;
       background-color: $primary-color;
@@ -121,6 +113,20 @@ main {
 
       &:hover {
         border: 2px solid $secondary-color;
+      }
+    }
+
+    .checkbox-container {
+      display: flex;
+      margin: 10px 0;
+      align-items: center;
+
+      input[type="checkbox"] {
+        margin-right: 15px;
+      }
+
+      .checkbox-label {
+        font-size: 13px;
       }
     }
 
